Incorporación de conectividad múltiple

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -13,73 +13,61 @@
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IUserManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IFriendshipManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IFriendRequestManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IChatManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_ILeaderBoardManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IEmailVerificationManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IEmailInvitationManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IUserSessionManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IMatchCreatorManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IFriendsManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_ILobbyManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
                 <binding name="NetTcpBinding_IGameManager">
-                    <reliableSession enabled="true" />
                     <security mode="None">
                         <transport sslProtocols="None" />
                     </security>
@@ -88,42 +76,42 @@
         </bindings>
 		
         <client>
-            <endpoint address="net.tcp://localhost:1441/UserService" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IUserManager" contract="HiveProxy.IUserManager"
-                name="NetTcpBinding_IUserManager" />
-            <endpoint address="net.tcp://localhost:1441/FriendshipService"
+            <endpoint address="net.tcp://192.168.230.26:1441/UserService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IUserManager"
+                contract="HiveProxy.IUserManager" name="NetTcpBinding_IUserManager" />
+            <endpoint address="net.tcp://192.168.230.26:1441/FriendshipService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendshipManager"
                 contract="HiveProxy.IFriendshipManager" name="NetTcpBinding_IFriendshipManager" />
-            <endpoint address="net.tcp://localhost:1441/FriendRequestService"
+            <endpoint address="net.tcp://192.168.230.26:1441/FriendRequestService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendRequestManager"
                 contract="HiveProxy.IFriendRequestManager" name="NetTcpBinding_IFriendRequestManager" />
-            <endpoint address="net.tcp://localhost:1441/ChatService" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IChatManager" contract="HiveProxy.IChatManager"
-                name="NetTcpBinding_IChatManager" />
-            <endpoint address="net.tcp://localhost:1441/LeaderBoardService"
+            <endpoint address="net.tcp://192.168.230.26:1441/ChatService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IChatManager"
+                contract="HiveProxy.IChatManager" name="NetTcpBinding_IChatManager" />
+            <endpoint address="net.tcp://192.168.230.26:1441/LeaderBoardService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ILeaderBoardManager"
                 contract="HiveProxy.ILeaderBoardManager" name="NetTcpBinding_ILeaderBoardManager" />
-            <endpoint address="net.tcp://localhost:1441/EmailVerificationService"
+            <endpoint address="net.tcp://192.168.230.26:1441/EmailVerificationService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmailVerificationManager"
                 contract="HiveProxy.IEmailVerificationManager" name="NetTcpBinding_IEmailVerificationManager" />
-            <endpoint address="net.tcp://localhost:1441/EmailInvitationService"
+            <endpoint address="net.tcp://192.168.230.26:1441/EmailInvitationService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmailInvitationManager"
                 contract="HiveProxy.IEmailInvitationManager" name="NetTcpBinding_IEmailInvitationManager" />
-            <endpoint address="net.tcp://localhost:1441/UserSessionService"
+            <endpoint address="net.tcp://192.168.230.26:1441/UserSessionService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IUserSessionManager"
                 contract="HiveProxy.IUserSessionManager" name="NetTcpBinding_IUserSessionManager" />
-            <endpoint address="net.tcp://localhost:1441/MatchCreatorService"
+            <endpoint address="net.tcp://192.168.230.26:1441/MatchCreatorService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMatchCreatorManager"
                 contract="HiveProxy.IMatchCreatorManager" name="NetTcpBinding_IMatchCreatorManager" />
-            <endpoint address="net.tcp://localhost:1441/FriendsService" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IFriendsManager" contract="HiveProxy.IFriendsManager"
-                name="NetTcpBinding_IFriendsManager" />
-            <endpoint address="net.tcp://localhost:1441/LobbyService" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_ILobbyManager" contract="HiveProxy.ILobbyManager"
-                name="NetTcpBinding_ILobbyManager" />
-            <endpoint address="net.tcp://localhost:1441/GameService" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IGameManager" contract="HiveProxy.IGameManager"
-                name="NetTcpBinding_IGameManager" />
+            <endpoint address="net.tcp://192.168.230.26:1441/FriendsService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendsManager"
+                contract="HiveProxy.IFriendsManager" name="NetTcpBinding_IFriendsManager" />
+            <endpoint address="net.tcp://192.168.230.26:1441/LobbyService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ILobbyManager"
+                contract="HiveProxy.ILobbyManager" name="NetTcpBinding_ILobbyManager" />
+            <endpoint address="net.tcp://192.168.230.26:1441/GameService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameManager"
+                contract="HiveProxy.IGameManager" name="NetTcpBinding_IGameManager" />
         </client>
     </system.serviceModel>
 	<log4net>
