Se realizo un analisis estatico con sonarQube y  en base a eso se hizo correciones y de codigo como la complejidad ciclomatica

--- a/HiveGameClient/HiveGameWPFApp/Properties/Settings.settings
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Language" Type="System.String" Scope="User">
       <Value Profile="(Default)">en-US</Value>
     </Setting>
+    <Setting Name="Sound" Type="System.String" Scope="User">
+      <Value Profile="(Default)">On</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
