--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -150,6 +150,9 @@
    <setting name="Language" serializeAs="String">
     <value>en-US</value>
    </setting>
+   <setting name="Sound" serializeAs="String">
+    <value>On</value>
+   </setting>
   </HiveGameWPFApp.Properties.Settings>
  </userSettings>
 </configuration>
