--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -178,7 +178,7 @@
 			</layout>
 		</appender>
 		<root>
-			<level value="ALL" />
+			<level value="Warn" />
 			<appender-ref ref="File" />
 		</root>
 	</log4net>
