correciones en los camos privados

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -12,109 +12,97 @@
     <system.serviceModel>
 		<bindings>
       <netTcpBinding>
-          <binding name="NetTcpBinding_IUserManager"
-				    closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IUserManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IFriendshipManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IFriendshipManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IFriendRequestManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IFriendRequestManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IChatManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IChatManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_ILeaderBoardManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_ILeaderBoardManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IEmailVerificationManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IEmailVerificationManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IEmailInvitationManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IEmailInvitationManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IUserSessionManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IUserSessionManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IMatchCreatorManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IMatchCreatorManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IFriendsManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IFriendsManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_ILobbyManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_ILobbyManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IGameManager"
-				   closeTimeout="00:00:05"
-                    openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-                    maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IGameManager" closeTimeout="00:00:05"
+              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
+              maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
