--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -12,97 +12,73 @@
     <system.serviceModel>
 		<bindings>
       <netTcpBinding>
-          <binding name="NetTcpBinding_IUserManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IUserManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IFriendshipManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IFriendshipManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IFriendRequestManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IFriendRequestManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IChatManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IChatManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_ILeaderBoardManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_ILeaderBoardManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IEmailVerificationManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IEmailVerificationManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IEmailInvitationManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IEmailInvitationManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IUserSessionManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IUserSessionManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IMatchCreatorManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IMatchCreatorManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IFriendsManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IFriendsManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_ILobbyManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_ILobbyManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
               </security>
           </binding>
-          <binding name="NetTcpBinding_IGameManager" closeTimeout="00:00:05"
-              openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10"
-              maxReceivedMessageSize="65536">
+          <binding name="NetTcpBinding_IGameManager" closeTimeout="00:00:05" openTimeout="00:00:05" receiveTimeout="00:05:00" sendTimeout="00:00:10" maxReceivedMessageSize="65536">
               <reliableSession enabled="true" />
               <security mode="None">
                   <transport sslProtocols="None" />
@@ -112,42 +88,42 @@
   </bindings>
 
 		<client>
-      <endpoint address="net.tcp://localhost:1441/UserService" binding="netTcpBinding"
-          bindingConfiguration="NetTcpBinding_IUserManager" contract="HiveProxy.IUserManager"
-          name="NetTcpBinding_IUserManager" />
-      <endpoint address="net.tcp://localhost:1441/FriendshipService"
+      <endpoint address="net.tcp://192.168.176.26:1441/UserService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IUserManager"
+          contract="HiveProxy.IUserManager" name="NetTcpBinding_IUserManager" />
+      <endpoint address="net.tcp://192.168.176.26:1441/FriendshipService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendshipManager"
           contract="HiveProxy.IFriendshipManager" name="NetTcpBinding_IFriendshipManager" />
-      <endpoint address="net.tcp://localhost:1441/FriendRequestService"
+      <endpoint address="net.tcp://192.168.176.26:1441/FriendRequestService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendRequestManager"
           contract="HiveProxy.IFriendRequestManager" name="NetTcpBinding_IFriendRequestManager" />
-      <endpoint address="net.tcp://localhost:1441/ChatService" binding="netTcpBinding"
-          bindingConfiguration="NetTcpBinding_IChatManager" contract="HiveProxy.IChatManager"
-          name="NetTcpBinding_IChatManager" />
-      <endpoint address="net.tcp://localhost:1441/LeaderBoardService"
+      <endpoint address="net.tcp://192.168.176.26:1441/ChatService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IChatManager"
+          contract="HiveProxy.IChatManager" name="NetTcpBinding_IChatManager" />
+      <endpoint address="net.tcp://192.168.176.26:1441/LeaderBoardService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ILeaderBoardManager"
           contract="HiveProxy.ILeaderBoardManager" name="NetTcpBinding_ILeaderBoardManager" />
-      <endpoint address="net.tcp://localhost:1441/EmailVerificationService"
+      <endpoint address="net.tcp://192.168.176.26:1441/EmailVerificationService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmailVerificationManager"
           contract="HiveProxy.IEmailVerificationManager" name="NetTcpBinding_IEmailVerificationManager" />
-      <endpoint address="net.tcp://localhost:1441/EmailInvitationService"
+      <endpoint address="net.tcp://192.168.176.26:1441/EmailInvitationService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmailInvitationManager"
           contract="HiveProxy.IEmailInvitationManager" name="NetTcpBinding_IEmailInvitationManager" />
-      <endpoint address="net.tcp://localhost:1441/UserSessionService"
+      <endpoint address="net.tcp://192.168.176.26:1441/UserSessionService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IUserSessionManager"
           contract="HiveProxy.IUserSessionManager" name="NetTcpBinding_IUserSessionManager" />
-      <endpoint address="net.tcp://localhost:1441/MatchCreatorService"
+      <endpoint address="net.tcp://192.168.176.26:1441/MatchCreatorService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMatchCreatorManager"
           contract="HiveProxy.IMatchCreatorManager" name="NetTcpBinding_IMatchCreatorManager" />
-      <endpoint address="net.tcp://localhost:1441/FriendsService" binding="netTcpBinding"
-          bindingConfiguration="NetTcpBinding_IFriendsManager" contract="HiveProxy.IFriendsManager"
-          name="NetTcpBinding_IFriendsManager" />
-      <endpoint address="net.tcp://localhost:1441/LobbyService" binding="netTcpBinding"
-          bindingConfiguration="NetTcpBinding_ILobbyManager" contract="HiveProxy.ILobbyManager"
-          name="NetTcpBinding_ILobbyManager" />
-      <endpoint address="net.tcp://localhost:1441/GameService" binding="netTcpBinding"
-          bindingConfiguration="NetTcpBinding_IGameManager" contract="HiveProxy.IGameManager"
-          name="NetTcpBinding_IGameManager" />
+      <endpoint address="net.tcp://192.168.176.26:1441/FriendsService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendsManager"
+          contract="HiveProxy.IFriendsManager" name="NetTcpBinding_IFriendsManager" />
+      <endpoint address="net.tcp://192.168.176.26:1441/LobbyService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ILobbyManager"
+          contract="HiveProxy.ILobbyManager" name="NetTcpBinding_ILobbyManager" />
+      <endpoint address="net.tcp://192.168.176.26:1441/GameService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGameManager"
+          contract="HiveProxy.IGameManager" name="NetTcpBinding_IGameManager" />
   </client>
 
 	</system.serviceModel>
